[REGISTER] - Add register with option sync up between 2 server
