# accounts/account.model.js
@@ -8,6 +8,8 @@ const schema = new Schema({
     title: { type: String, required: true },
     firstName: { type: String, required: true },
     lastName: { type: String, required: true },
+    phoneNumber: { type: String, required: true },
+    gender: { type: String, enum: ["male", "female"] },
     avatar: { type: String },
     cover: { type: String },
     userId: { type: String },
@@ -18,7 +20,6 @@ const schema = new Schema({
     working_link: { type: String },
     about: { type: String },
     school: { type: String },
-    gender: { type: String },
     birthday: { type: String },
     language: { type: String },
     acceptTerms: Boolean,
