# accounts/accounts.controller.js
@@ -87,7 +87,9 @@ function registerSchema(req, res, next) {
         email: Joi.string().email().required(),
         password: Joi.string().min(6).required(),
         confirmPassword: Joi.string().valid(Joi.ref('password')).required(),
-        acceptTerms: Joi.boolean().valid(true).required()
+        acceptTerms: Joi.boolean().valid(true).required(),
+        phoneNumber: Joi.string().required(),
+        gender: Joi.string().required()
     });
     validateRequest(req, next, schema);
 }
